(bug) overflow in firefox - signin

--- a/css/styles-sign-in.css
+++ b/css/styles-sign-in.css
@@ -79,7 +79,7 @@ div.message p {
 .log-in {
   position: relative;
   left: 25%;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 div input {
   margin: 10px;
